# weatherisk

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  pyproject.toml  questions.md
crates/weatherisk_core/: Cargo.toml
crates/weatherisk_core/src/: density.rs  grid.rs  lec.rs  lib.rs  optimizer.rs
docs/: benchmark_results.md  code_execution_flow.md  methodology.docx  methodology_notes.md  optimization_learnings.md  pipeline_bottleneck_analysis.md  python_r_parity_migration_plan.md  rust_r_parity_migration_plan.md
docs/phd_thesis/: main.tex
docs/software_x/: AGENTS.md  fig9_parity_progress_2026-03-11.md  fig9_validation_report.tex  fig9_validation_summary.md  softwarex_paper.tex  softwarex_paper_v18.tex  softwarex_paper_v2.aux  softwarex_paper_v2.out  softwarex_paper_v2.tex  softwarex_paper_v3.aux  softwarex_paper_v3.out  softwarex_paper_v3.tex  softwarex_paper_v4.aux  softwarex_paper_v4.fdb_latexmk  softwarex_paper_v4.fls  softwarex_paper_v4.tex  softwarex_paper_v5.aux  softwarex_paper_v5.tex  softwarex_paper_v6.aux  softwarex_paper_v6.out  softwarex_paper_v6.tex  softwarex_paper_v7.aux  softwarex_paper_v7.tex
hpc/: check_fig9_environment.sh  find_cmip6_data.sh  run_fig9.slurm  run_fig9_clean.slurm  run_fig9_mle_array.slurm  setup_albedo.sh  setup_rust.sh
meeting_notes/: 27.02.2026.md
notebooks/: weatherisk_quickstart.ipynb
r_code/: c1_simulation.R  c1_simulation.sh  c2_locest_calc.R  c2_locest_calc.sh  c2_locest_calc_override.sh  c3_locest_merge.R  c3_locest_merge.sh  c3_locest_merge_override.sh  c4_locest_clust.R  c4_locest_clust.sh  c5_saunders_clust.R  c5_saunders_clust.sh  c6_inclusters_locest.R  c6_inclusters_locest.sh  c7_inclusters_locest_merge.R  c7_inclusters_locest_merge.sh  c8_inclusters_saunders.R  c8_inclusters_saunders.sh  c9_inclusters_saunders_merge.R  c9_inclusters_saunders_merge.sh  cX_finish.R  cX_finish.sh  functions.R  howto.txt  parameters.R  parameters_bigsmall.R  parameters_rotate.R  plot.R  run.sh  run_frominclusters.sh  run_fromlocest.sh  run_fromlocest_override.sh
scripts/: _analyze_clusters.py  _diagnose_mle.py  _find_all_bug_positions.py  _inspect_step2.py  _koch_risk_benchmark.py  _test_cell13.py  _test_ensemble_size.py  _tmp_r_optimizer_trace.R  _validate_koch_risk.py  benchmark.py  cluster_risk_maps.py  compare_fig9_python_r.py  generate_methodology_doc.py  generate_paper_plots.py  gev_diagnostics.py  investigate_risk_metrics.py  plot_koch_risk.py  plot_risk_lec_worldmap.py  plot_risk_worldmap.py  replay_fig9_benchmark_in_r.R  reproduce_fig3.py  reproduce_fig9.py  risk_decomposition.py  risk_decomposition_v2.py  run_cmip6_benchmark.py  run_fig9_benchmark.py  run_hotpath_benchmark.py  sensitivity_epsilon.py  validate_es.py
tests/: conftest.py  generate_cmip6_mini_reference.R  generate_r_reference.R  test_benchmarks.py  test_cli.py  test_clustering.py  test_cmip6_checkpointing.py  test_cmip6_performance_equivalence.py  test_cmip6_rparity.py  test_covariance.py  test_density.py  test_estimation.py  test_extremes.py  test_grid.py  test_netcdf.py  test_paper_reproduction.py  test_parameters.py  test_pipeline_integration.py  test_plotting.py  test_r_cross_validation.py  test_r_parity_fixes.py  test_risk.py  test_risk_pipeline.py  test_rust_parity.py  test_scalable.py  test_simulation.py
tests/parity/: PARITY_REPORT.md  conftest.py  test_parity_c_extrcoeff_matrix.py  test_parity_calc_distance_ellipses.py  test_parity_clustering.py  (+16 more)
weatherisk/: __init__.py  backend.py  benchmarks.py  cli.py  clustering.py  cmip6_data.py  cmip6_pipeline.py  covariance.py  cpc_pipeline.py  density.py  estimation.py  extremes.py  gdp.py  grid.py  io.py  koch_risk.py  map_plotting.py  netcdf.py  parameters.py  pipeline.py  plotting.py  risk.py  risk_pipeline.py  scalable.py  simulation.py
(+72 files in other folders)
