[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherisk"
version = "0.1.1"
description = "Climate risk analysis via max-stable process clustering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Widad Kchikach", email = "widad.kchikach@awi.de"},
    {name = "Thorsten Dickhaus"},
    {name = "Gerrit Lohmann"},
]
keywords = ["climate", "risk", "extreme-value", "max-stable", "clustering"]

[project.urls]
Homepage = "https://github.com/wkchikach99-byte/weatherisk"
Repository = "https://github.com/wkchikach99-byte/weatherisk"
"Bug Tracker" = "https://github.com/wkchikach99-byte/weatherisk/issues"
"Zenodo DOI" = "https://doi.org/10.5281/zenodo.20069739"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "click>=8.0",
    "xarray>=2023.1",
    "netCDF4>=1.6",
    "scikit-learn>=1.3",
    "cartopy>=0.21",
    "h5py>=3.8",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "pyreadr>=0.5",
    "psutil>=6.0",
]

[project.scripts]
weatherisk = "weatherisk.cli:main"

[tool.setuptools.packages.find]
include = ["weatherisk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
