[package]
name = "weatherisk_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "weatherisk_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
statrs = "0.18"
rayon = "1"
lbfgsb-rs-pure = "0.1"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
